Fix #page-metadata layout bug on phone layouts

--- a/css/include/initial.css
+++ b/css/include/initial.css
@@ -352,6 +352,41 @@ header h1 {
 	#page-metadata-block > #page-importance::after {
 		content: none;
 	}
+
+	#page-metadata-block {
+		display: flex;
+		flex-flow: row wrap;
+		justify-content: center;
+	}
+	/* date, status */
+	#page-metadata-block :nth-child(1),
+	#page-metadata-block :nth-child(2) {
+		order: 1;
+	}
+	/* certainty, importance */
+	#page-metadata-block :nth-child(3),
+	#page-metadata-block :nth-child(4) {
+		order: 3;
+	}
+	/* backlinks, similar, bibliography */
+	#page-metadata-block :nth-child(5),
+	#page-metadata-block :nth-child(6),
+	#page-metadata-block :nth-child(7) {
+		order: 5;
+	}
+	#page-metadata-block::before,
+	#page-metadata-block::after {
+		content: "";
+		width: 100%;
+	}
+	/* break between date/status and certainty/importance */
+	#page-metadata-block::before {
+		order: 2;
+	}
+	/* break between certainty/importance and backlinks/similar/bibliography */
+	#page-metadata-block::after {
+		order: 4;
+	}
 }
 
 /*=--------=*/
